--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.14.0",
     "jade": "^1.11.0",
     "morgan": "^1.7.0",
+    "node-telegram-bot-api": "^0.24.0",
     "pm2": "^2.0.18",
     "request": "^2.75.0"
   },
