--- a/config.example.json
+++ b/config.example.json
@@ -2,7 +2,8 @@
 	"port": 9090,
 	"node": "192.168.1.1:9305",
 	"telegram": {
-		"token": ""
+		"token": "",
+		"chatids": [01234, 124324]
 	},
 	"lobby": [ "davideg", "tizio" ]
 }
