--- a/config.example.json
+++ b/config.example.json
@@ -3,7 +3,12 @@
 	"node": "192.168.1.1:9305",
 	"telegram": {
 		"token": "",
-		"chatids": [01234, 124324]
+		"chatids": [1234, 124324],
+		"users": {
+			"davideg": "dagide",
+			"tizio": "tizio"
+		}
 	},
+	"accesskey": "lobbykey",
 	"lobby": [ "davideg", "tizio" ]
 }
