Watch only addresses

--- a/config.example.json
+++ b/config.example.json
@@ -10,5 +10,6 @@
 		}
 	},
 	"accesskey": "lobbykey",
-	"lobby": [ "davideg", "tizio" ]
+	"lobby": [ "davideg", "tizio" ],
+	"addresses": ["1513660116340715009S"]
 }
