--- a/config.example.json
+++ b/config.example.json
@@ -13,6 +13,7 @@
 	"accesskey": "lobbykey",
 	"lobby": [ "davideg", "tizio" ],
 	"addresses": ["1513660116340715009S"],
+	"voters": [],
 
 	"all": false
 }
