--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ejs": "^2.5.2",
     "express": "^4.14.0",
     "jade": "^1.11.0",
+    "liskapi": "^0.1.1",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
     "node-telegram-bot-api": "^0.24.0",
